[gd_scene load_steps=4 format=1]

[ext_resource path="res://core/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://core/Menu/NewProfileDialog.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/conthrax20.fnt" type="Font" id=3]

[node name="Menu" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="Profiles" type="VBoxContainer" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 482.0
margin/top = 270.0
margin/right = 72.0
margin/bottom = -50.0
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="Profiles"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 410.0
margin/bottom = 13.0
text = "Choose a Profile"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="Profiles"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 17.0
margin/right = 410.0
margin/bottom = 20.0

[node name="List" type="PanelContainer" parent="Profiles"]

visibility/blend_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 24.0
margin/right = 410.0
margin/bottom = 290.0
__meta__ = { "_editor_collapsed":true }

[node name="scroll" type="ScrollContainer" parent="Profiles/List"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 4.0
margin/top = 8.0
margin/right = 406.0
margin/bottom = 262.0
scroll/horizontal = false
scroll/vertical = true

[node name="box" type="VBoxContainer" parent="Profiles/List/scroll"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 402.0
margin/bottom = 0.0
alignment = 0

[node name="HSeparator1" type="HSeparator" parent="Profiles"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 294.0
margin/right = 410.0
margin/bottom = 297.0

[node name="Functions" type="HBoxContainer" parent="Profiles"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 301.0
margin/right = 410.0
margin/bottom = 320.0
alignment = 0

[node name="New" type="Button" parent="Profiles/Functions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 203.0
margin/bottom = 19.0
toggle_mode = false
text = "New Profile"
flat = false

[node name="Delete" type="Button" parent="Profiles/Functions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 207.0
margin/top = 0.0
margin/right = 410.0
margin/bottom = 19.0
disabled = true
toggle_mode = false
text = "Delete Profile"
flat = false

[node name="Button" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 62.0
margin/top = -200.0
margin/right = -44.0
margin/bottom = -249.0
disabled = true
toggle_mode = false
text = "PLAY!"
flat = false

[node name="NewProfileDialog" type="WindowDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 270.0
margin/top = 200.0
margin/right = 610.0
margin/bottom = 340.0
popup/exclusive = true
window/title = "Create a new Profile"
script/script = ExtResource( 2 )
__meta__ = { "_editor_collapsed":true }

[node name="box" type="VBoxContainer" parent="NewProfileDialog"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 10.0
margin/right = 30.0
margin/bottom = 0.0
alignment = 0

[node name="Label" type="Label" parent="NewProfileDialog/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 280.0
margin/bottom = 49.0
text = "Please name your Profile.."
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Name" type="LineEdit" parent="NewProfileDialog/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 53.0
margin/right = 280.0
margin/bottom = 76.0
text = ""
max_length = 0
editable = true
secret = false

[node name="Functions" type="HBoxContainer" parent="NewProfileDialog/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 80.0
margin/right = 280.0
margin/bottom = 130.0
alignment = 1

[node name="OK" type="Button" parent="NewProfileDialog/box/Functions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 98.0
margin/top = 15.0
margin/right = 127.0
margin/bottom = 34.0
disabled = true
toggle_mode = false
text = "OK"
flat = false

[node name="Cancel" type="Button" parent="NewProfileDialog/box/Functions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 131.0
margin/top = 15.0
margin/right = 182.0
margin/bottom = 34.0
toggle_mode = false
text = "Cancel"
flat = false

[node name="GameView" type="VBoxContainer" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -28.0
margin/top = 280.0
margin/right = -488.0
margin/bottom = -110.0
alignment = 0

[node name="Title" type="Label" parent="GameView"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 460.0
margin/bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "CurrentProfile"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="GameView"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 26.0
margin/right = 460.0
margin/bottom = 29.0

[connection signal="pressed" from="Profiles/Functions/New" to="." method="_on_New_pressed"]

[connection signal="about_to_show" from="NewProfileDialog" to="NewProfileDialog" method="_on_NewProfileDialog_about_to_show"]

[connection signal="text_changed" from="NewProfileDialog/box/Name" to="NewProfileDialog" method="_on_Name_text_changed"]

[connection signal="pressed" from="NewProfileDialog/box/Functions/OK" to="NewProfileDialog" method="_on_OK_pressed"]

[connection signal="pressed" from="NewProfileDialog/box/Functions/Cancel" to="NewProfileDialog" method="_on_Cancel_pressed"]


